--- a/GenericHID/programmer/Programmer.vcproj
+++ b/GenericHID/programmer/Programmer.vcproj
@@ -45,6 +45,7 @@
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
 				PrecompiledHeaderFile=".\$(ConfigurationName)/Programmer.pch"
+				WarningLevel="4"
 				DebugInformationFormat="0"
 			/>
 			<Tool
@@ -108,6 +109,7 @@
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
 				PrecompiledHeaderFile=".\$(ConfigurationName)/Programmer.pch"
+				WarningLevel="4"
 				DebugInformationFormat="3"
 			/>
 			<Tool
