--- a/GenericHID/makeeeprom/makeeeprom.vcproj
+++ b/GenericHID/makeeeprom/makeeeprom.vcproj
@@ -103,6 +103,7 @@
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include;.\GeneratedFiles;&quot;$(QTDIR)\include&quot;;&quot;.\GeneratedFiles\$(ConfigurationName)&quot;;&quot;$(QTDIR)\include\QtCore&quot;;&quot;$(QTDIR)\include\QtXml&quot;;.\;..\utility"
 				PreprocessorDefinitions="UNICODE,WIN32,QT_THREAD_SUPPORT,QT_CORE_LIB,QT_XML_LIB,MAKEEEPROM_LIB"
+				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				TreatWChar_tAsBuiltInType="false"
 				UsePrecompiledHeader="2"
