--- a/GenericHID/generichid/GenericHID.vcproj
+++ b/GenericHID/generichid/GenericHID.vcproj
@@ -61,9 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="qtmain.lib QtCore.lib QtGui.lib QtXml.lib ..\libusb-win32-device-bin-0.1.12.2\lib\msvc\libusb.lib QtSolutions_PropertyBrowser-2.5.lib Ws2_32.lib Imm32.lib Winmm.lib"
+				AdditionalDependencies="qtmain.lib QtCore.lib QtGui.lib QtXml.lib ..\libusb-win32-device-bin-0.1.12.2\lib\msvc\libusb.lib QtSolutions_PropertyBrowser-2.5.lib Ws2_32.lib Imm32.lib Winmm.lib qjpeg.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
-				AdditionalLibraryDirectories="$(QTDIR)\lib;..\qtpropertybrowser-2.5-opensource\lib"
+				AdditionalLibraryDirectories="&quot;$(QTDIR)\plugins\imageformats&quot;;$(QTDIR)\lib;..\qtpropertybrowser-2.5-opensource\lib"
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
 				SubSystem="2"
@@ -140,9 +140,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="QtSolutions_PropertyBrowser-2.5d.lib qtmaind.lib QtCored.lib QtGuid.lib QtXmld.lib ..\libusb-win32-device-bin-0.1.12.2\lib\msvc\libusb.lib Ws2_32.lib Imm32.lib Winmm.lib"
+				AdditionalDependencies="QtSolutions_PropertyBrowser-2.5d.lib qtmaind.lib QtCored.lib QtGuid.lib QtXmld.lib ..\libusb-win32-device-bin-0.1.12.2\lib\msvc\libusb.lib Ws2_32.lib Imm32.lib Winmm.lib qjpeg.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
-				AdditionalLibraryDirectories="&quot;$(QTDIR)\lib&quot;;&quot;..\qtpropertybrowser-2.5-opensource\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(QTDIR)\plugins\imageformats&quot;;&quot;$(QTDIR)\lib&quot;;&quot;..\qtpropertybrowser-2.5-opensource\lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 			/>
@@ -2538,13 +2538,6 @@
 				<File
 					RelativePath=".\generatedfiles\Release\moc_shapeitem.cpp"
 					>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-						/>
-					</FileConfiguration>
 					<FileConfiguration
 						Name="Debug|Win32"
 						ExcludedFromBuild="true"
