--- a/GenericHID/makehelp/makehelp.vcproj
+++ b/GenericHID/makehelp/makehelp.vcproj
@@ -227,6 +227,10 @@
 			SourceControlFiles="false"
 			>
 		</Filter>
+		<File
+			RelativePath=".\converthelp.bat"
+			>
+		</File>
 	</Files>
 	<Globals>
 		<Global
